# manhelper

./: Application.vala  Bookmark.vala  Bookmarks.vala  KeywordList.vala  MultiTabs.vala  README.md  meson.build  postinstall.sh  startup_script.sh
data/: com.github.manhelper.desktop.in
src/: Application.vala  Bookmarks.vala  KeywordList.vala  MainWin.vala  MultiTabPager.vala  PageZoomer.vala  PreferDialog.vala  Preferences.vala  SearchDialog.vala  SectionList.vala  ThemeCSS.vala
ui/: about_dialog.ui  bookmarks_dialog.ui  keyword_dialog.ui~  keyword_list.ui  keyword_list.ui~  keyword_window.ui~  manhelper.gresource.xml  manhelper.ui  manhelper.ui~  multitab_pager.ui  page_zoomer.ui  prefer_dialog.ui  search_dialog.ui  search_dialog.ui~  search_window.ui~  section_list.ui  theme_dialog.ui
